moved keys to env to not expose them

--- a/bot/package.json
+++ b/bot/package.json
@@ -11,10 +11,13 @@
   "description": "",
   "dependencies": {
     "@huggingface/inference": "^2.8.1",
+    "@prisma/client": "^6.1.0",
+    "dotenv": "^16.4.7",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
+    "prisma": "^6.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   }
