--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,22 @@
 # Dependencies
-**/node_modules
-**/dist
+node_modules/
+*/node_modules/
+**/node_modules/
 
-# Environment
+# Environment files
+.env
+*.env
 **/.env
-**/.env.local
-**/.env.development.local
-**/.env.test.local
-**/.env.production.local
-
-# Logs
-**/logs
-**/*.log
-**/npm-debug.log*
-**/yarn-debug.log*
-**/yarn-error.log*
-**/pnpm-debug.log*
-**/lerna-debug.log*
-
-# Editor
-**/.vscode/*
-!**/.vscode/extensions.json
-**/.idea
-**/.DS_Store
-**/*.suo
-**/*.ntvs*
-**/*.njsproj
-**/*.sln
-**/*.sw?
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Build
-**/dist
-**/dist-ssr
-**/*.local
+dist/
+build/
 
-# Custom
-bot/.env
-client/.env
+# Logs
+logs
+*.log
+npm-debug.log*
